# well-logs

./: .gitignore  README.md  lambda_function.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: basic-test.yml  complex-test.yml  deploy.yml
tests/: test_database.py  test_hash_log.py
