[tool.poetry]
name = "wells"
version = "0.1.0"
description = ""
authors = ["Don Fox <don@fox>"]

[tool.poetry.dependencies]
python = "^3.10"
ImageHash = "^4.3.0"
boto3 = "^1.28.41"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
